# Fund-My-Cause

./: CHANGELOG.md  Cargo.toml  package-lock.json  task1.md
.github/workflows/: contract-upgrade-test.yml  gas-monitoring.yml  multi-region-deployment.yml  performance-benchmarks.yml  rust_ci.yml  secret-rotation.yml
apps/interface/messages/: ar.json  de.json  en.json  es.json  fr.json  he.json  zh.json
apps/interface/src/__mocks__/: next-intl.ts
apps/interface/src/app/: rtl.css
apps/interface/src/app/[locale]/: layout.tsx
apps/interface/src/app/[locale]/campaigns/[id]/: CampaignDetailContent.tsx
apps/interface/src/app/campaigns/: page.tsx
apps/interface/src/components/search/: AdvancedSearch.tsx  SearchResults.tsx
apps/interface/src/components/ui/: CampaignCard.tsx  CancelCampaignModal.tsx  CountdownTimer.tsx  GoalSuccessModal.tsx  PledgeModal.tsx
apps/interface/src/hooks/: index.ts  useAdvancedSearch.ts  useRTL.ts
apps/interface/src/i18n/: config.ts
apps/interface/src/lib/: contract.ts  format.ts
apps/interface/src/services/: search.service.ts
contracts/benchmarks/benches/: contract_benchmarks.rs
contracts/crowdfund/: Cargo.toml
contracts/crowdfund/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs  validation.rs
contracts/registry/src/: lib.rs
docs/: contract-function-docs.md  gas-monitoring.md  secret-management.md  testing.md
k8s/: LOG_AGGREGATION.md  elasticsearch.yaml  filebeat.yaml  kibana.yaml  logstash.yaml
scripts/: monitor-gas.sh  multi-region-deploy.sh  rotate-secrets.sh
